    the other bridge-related widgets when the user toggles the relay mode
    in the Network settings page. (Ticket #480)
  o Tolerate bridge addresses that do not specify a port number, since Tor
    now defaults to using port 443 in such cases.
  o Add support for viewing the map as a full screen widget when built
    with KDE Marble support.
  o Renamed the 'make win32-installer' CMake target to 'make dist-win32'
    for consistency with our 'make dist-osx' target.
  o Fix a couple bugs in the WiX-based Windows installer related to building
    a Marble-enabled Vidalia installer.
  o Write the list of source files containing translatable strings to a
    .pro file and supply just the .pro file as an argument to lupdate, rather
    than supplying all of the source file names themselves.
  o Raise the minimum required Qt version from 4.2 to 4.3.


0.2.0   19-Mar-2009
  o Add support for changing UI languages without having to restart
    Vidalia.
  o Add preliminary support for using the KDE Marble widget for the
    network map. It's currently a compile-time option and is disabled by
    default.
  o Add support for displaying Tor's plaintext port warnings. Also gives
    the user the option to disable future warnings.
  o Add an interface for displaying the geographic distribution of
    clients who have recently used a bridge operator's relay.
  o Add tooltips to tree items in the help browser's table of contents. Some 
    of the help topic labels are a bit long.
  o Switch to a simpler About dialog and move the license information to a
    separate HTML-formatted display.
  o Switch to a simpler drag-and-drop installer in the OS X bundles.
  o Switch to an MSI-based installer on Windows.
  o Clear the list of default CA certificates used by QSslSocket before adding
    the only one we care about. Suggested by coderman.
  o Support building with Visual Studio again.
  o Add a Debian package structure from dererk.