@@ -9,6 +9,8 @@
     now defaults to using port 443 in such cases.
   o Add support for viewing the map as a full screen widget when built
     with KDE Marble support.
+  o Add a signal handler that allows Vidalia to clean up and exit normally
+    when it catches a SIGINT or SIGTERM signal. (Ticket #481)
   o Renamed the 'make win32-installer' CMake target to 'make dist-win32'
     for consistency with our 'make dist-osx' target.
   o Fix a couple bugs in the WiX-based Windows installer related to building
